@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-27T08:07:45Z",
-  "count" : 9,
+  "timestamp" : "2022-05-27T16:07:14Z",
+  "count" : 8,
   "count_minmax" : [ 1, 10 ],
-  "count_decinc" : [ -1, +0 ],
-  "uniques" : 2,
+  "count_decinc" : [ -2, +0 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -1, +0 ]
+  "uniques_decinc" : [ -2, +0 ]
 }
