@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-05-27T08:07:45Z",
+  "timestamp" : "2022-05-27T16:07:14Z",
   "count_outdated" : 356,
   "uniques_outdated" : 72,
-  "count" : 383,
-  "uniques" : 80,
+  "count" : 382,
+  "uniques" : 79,
   "views" : [
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 9,
+      "count": 8,
       "count_minmax": [ 1, 10 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 3 ]
     },
     {
