@@ -1,11 +1,11 @@
 {
-  "count": 27,
-  "uniques": 8,
+  "count": 26,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 9,
-      "uniques": 2
+      "count": 8,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-15T00:00:00Z",
