@@ -1,3 +1,10 @@
+2022-05-27T16:07:14Z:
+* notice: last 14d: unq all: 7 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 72 356 / 80 383
+* notice: next accum: outdated-unq outdated-all / unq all: 72 356 / 79 382
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +0 +0 -2 -2 / 1 8
+* notice: changed dates: [2022-05-13]
+
 2022-05-27T08:07:45Z:
 * notice: last 14d: unq all: 8 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 72 356 / 81 384
